Fine separazione model e controller, avanzameto con controller